# lore

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .golangci.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  Taskfile.yml  go.mod  go.sum  redocly.yaml  sqlc.yaml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  evals-nightly.yml  evals.yml  examples.yml  inspector-image.yml  release-sdk.yml  release.yml  security.yml
clients/mcp/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
clients/mcp/src/: bin.ts  client.ts  config.ts  errors.ts  http.ts  index.ts  server.ts  version.ts  wire.ts
clients/mcp/test/: client.test.ts  config.test.ts  errors.test.ts  harness.ts  http.test.ts  tools.test.ts  version.test.ts
clients/python/: README.md  pyproject.toml
clients/python/examples/: async_hero.py  hero.py
clients/python/loregpt/: __init__.py  _types.py  _wire.py  client.py  errors.py
clients/python/loregpt/_generated/: wire.py
clients/python/scripts/: check_readme_hero.py
clients/python/tests/: conftest.py  test_client.py  test_version.py  test_xor.py
clients/typescript/: README.md  index.js  package.json  pnpm-lock.yaml  tsconfig.check.json  tsconfig.json
clients/typescript/examples/: hero.ts
clients/typescript/scripts/: check-readme-hero.mjs
clients/typescript/src/: client.ts  errors.ts  index.ts  types.ts  wire.ts
clients/typescript/test/: client.test.ts
clients/typescript/test-d/: index.test-d.ts
core/: endtoend_integration_test.go  server.go  server_integration_test.go  server_test.go  version.go  worker.go
core/apikey/: apikey.go  apikey_test.go
core/embed/openai/: openai.go  openai_test.go
core/ext/: basic.go  embedder.go  embedder_test.go  errors.go  ext.go  ext_test.go  fixture.go  fixture_test.go
core/extract/anthropic/: batch_test.go  extract.go  extract_test.go  schema.go  smoke_test.go
core/httpapi/: events.go  health.go  httpapi.go  httpapi_integration_test.go  httpapi_test.go  inspect.go  inspect_integration_test.go  inspect_test.go  middleware.go  pack.go  pack_integration_test.go  respond.go  runs.go  runs_integration_test.go  state_writethrough_integration_test.go  tracing_test.go
core/jobs/: consolidate.go  consolidate_test.go  ensure_index.go  ensure_index_test.go  extract_event.go  extract_event_test.go  extract_run.go  extract_run_test.go  gate.go  gate_test.go  persist.go  state_routing_test.go  trace_test.go
core/metrics/: metrics.go  metrics_test.go
core/obs/: trace.go
core/pack/: metrics_integration_test.go  model_ryw_integration_test.go  pack.go  pack_integration_test.go  pack_test.go  sort.go  trace_integration_test.go
core/provision/: provision.go  provision_integration_test.go
core/queue/: adjudicate_integration_test.go  consolidate_integration_test.go  dedup_metrics_integration_test.go  dedup_similarity_integration_test.go  embedding_integration_test.go  ensure_index_integration_test.go  extract_run_integration_test.go  metrics_integration_test.go  migrate.go  model_pin_integration_test.go  otel_integration_test.go  queue.go  queue_integration_test.go  queue_test.go  state_routing_integration_test.go
core/retrieval/: ann.go  ann_integration_test.go  hybrid.go  hybrid_integration_test.go  perf_test.go  rrf.go  rrf_test.go  trace_integration_test.go
core/store/: claims_registry_integration_test.go  content_hash_integration_test.go  covered_seq_integration_test.go  embeddings_integration_test.go  entities_integration_test.go  event_seq_integration_test.go  extraction_mode_integration_test.go  migrate.go  partitions.go  partitions_integration_test.go  resolution_reason_integration_test.go  rls_integration_test.go  seq_audit_integration_test.go  store.go  store_integration_test.go  vector_index.go  vector_index_integration_test.go
core/store/db/: auth.sql.go  claims.sql.go  consolidate.sql.go  embeddings.sql.go  entities.sql.go  events.sql.go  inspect.sql.go  memories.sql.go  memory_scopes.sql.go  memory_versions.sql.go  models.go  models.sql.go  pack.sql.go  retrieval.sql.go  runs.sql.go  seed.sql.go
core/store/migrations/: 0001_init.sql  0002_memories_columns.sql  0003_versions_claims_scopes.sql  0004_entities_entity_links.sql  0005_embeddings.sql  0006_partition_memories_embeddings.sql  0007_seq_retention_pack_audit.sql  0008_roles_rls.sql  0009_events_seq_not_null.sql  0010_runs_covered_seq.sql  0011_claims_entity_registry.sql  0012_extraction_mode_batch_state.sql  0013_memory_content_hash.sql  0014_claims_resolution_reason.sql  0015_memory_context_hash.sql  0016_memories_content_fts_gin.sql  0017_pack_logs_complete.sql  embed.go  (+1 more)
core/workmem/: memory.go  statefact.go  statefact_test.go  transition_test.go  valkey.go  valkey_integration_test.go  workmem.go  workmem_test.go
docs/rfcs/: 0001-read-your-writes-contract.md  0002-coordination-bench.md  README.md
evals/: .gitignore  README.md  pyproject.toml
evals/examples/: smoke.py
evals/fixtures/: clean_room.json
evals/longmemeval/: __init__.py  _types.py  answerer.py  baseline.py  batch.py  cache.py  guards.py  judge.py  loader.py  report.py  runner.py  stats.py
evals/longmemeval/adapters/: __init__.py  base.py  lore.py  mem0.py
evals/tests/: test_baseline.py  test_batch.py  test_cache.py  test_guards.py  test_judge.py  test_loader.py  test_lore_adapter.py  test_mem0_adapter.py  test_report.py  test_runner.py  test_stats.py
examples/: README.md
examples/langgraph/: README.md  coordinate.py  pyproject.toml
infra/: Dockerfile  docker-compose.yml
inspector/: .dockerignore  .env.example  .gitignore  Dockerfile  NOTICE  README.md  biome.json  next.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
inspector/src/: proxy.ts
inspector/test/: http-guards.test.ts
scripts/: import-smoke.sh
scripts/sqlc-tenant-lint/: main.go  main_test.go
spec/: openapi.yaml  redocly.yaml
(+91 files in other folders)
