[project]
name = "longmemeval-harness"
version = "0.1.0"
description = "Reproducible LongMemEval harness — score memory systems (Lore, and later Mem0/Zep) through one pinned, cached judge with the same-judge discipline."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "The LoreGPT Authors" }]

# Harness-only runtime deps. The judge is the official LongMemEval judge (OpenAI GPT-4o snapshot); the answerer
# runs on our own stack (Anthropic); the Lore adapter drives the server through the published Python SDK. None
# of this reaches the shipped Lore product — it is the evaluation harness, not a library.
dependencies = [
  "openai>=1.50,<2",
  "anthropic>=0.40,<1",
  "huggingface-hub>=0.25,<1",
  "loregpt",
]

[project.urls]
Repository = "https://github.com/lore-gpt/lore"
Issues = "https://github.com/lore-gpt/lore/issues"

# loregpt is not published to PyPI yet, so depend on the in-repo SDK via a path source (monorepo). When the
# SDK publishes, this becomes a normal version pin.
[tool.uv.sources]
loregpt = { path = "../clients/python", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["longmemeval"]

[tool.hatch.build.targets.wheel.force-include]
"longmemeval/py.typed" = "longmemeval/py.typed"

[dependency-groups]
dev = [
  "mypy==2.3.0",
  "pytest==9.1.1",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
files = ["longmemeval", "tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
