[project]
name = "loregpt"
version = "0.1.0"
description = "Python SDK for Lore — coordination memory for multi-agent AI systems: create runs, write events, and fetch read-your-writes context packs."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "The LoreGPT Authors" }]
keywords = ["ai", "agents", "multi-agent", "memory", "llm", "mcp", "coordination", "context", "read-your-writes"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
]
# One runtime dependency: httpx, for connection pooling and a shared sync/async transport. A wide range so
# it never conflicts with a user's existing stack; revisit the ceiling when httpx 1.0 ships.
dependencies = ["httpx>=0.27,<1"]

[project.urls]
Homepage = "https://loregpt.ai"
Repository = "https://github.com/lore-gpt/lore"
Issues = "https://github.com/lore-gpt/lore/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["loregpt"]

[tool.hatch.build.targets.wheel.force-include]
"loregpt/py.typed" = "loregpt/py.typed"

# PEP 735 dev group — installed by the existing `uv sync` (dev is the default group), so CI needs no extra
# install step. datamodel-code-generator uses pydantic internally to parse the spec, but its TypedDict OUTPUT
# references no pydantic, so pydantic never reaches the shipped package.
[dependency-groups]
dev = [
  "datamodel-code-generator==0.68.1",
  "mypy==2.3.0",
  "pytest==9.1.1",
  "typing_extensions>=4.12",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
files = ["loregpt", "tests", "examples"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "RUF"]

[tool.ruff.lint.per-file-ignores]
# @generated — never hand-lint codegen output (mirrors the TS generated types being excluded from lint).
"loregpt/_generated/*" = ["ALL"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
